--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
 
-html::-webkit-scrollbar{}
+::-webkit-scrollbar {
+     height: 8px;
+     width: 8px;
+}
+
+::-webkit-scrollbar-track {
+     background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+     background: rgb(219, 219, 219);
+}
